# Debtrix

./: .gitignore  README.md  index.html  mind.md  package-lock.json  package.json  vite.config.js
.github/workflows/: ci.yml  deploy-contracts.yml  deploy.yml
contracts/expense_splitter/: Cargo.toml
contracts/expense_splitter/src/: lib.rs
contracts/reward_token/: Cargo.toml
contracts/reward_token/src/: lib.rs
src/: App.jsx  index.css
src/__tests__/: cache.test.js  splitCalc.test.js  validation.test.js
src/components/: AnimatedBackground.jsx  DebtSummary.jsx  DirectPayment.jsx  ExpenseForm.jsx  ExpenseList.jsx  Header.jsx  RecentActivity.jsx  SettleModal.jsx  TransactionFeedback.jsx  WalletBar.jsx
src/hooks/: useBalance.js  useContract.js  useExpenses.js  useRewardBalance.js  useTransaction.js  useWallet.js
src/utils/: cache.js  helpers.js  stellar.js
