[package]
name = "reward_token"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = "20.0.0-rc.3"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "debuginfo"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
